cli endpoint
